Archive2/39/9faf14b43b5732/output
clang version 3.5 (trunk 198621)
Target: x86_64-unknown-linux-gnu
Thread model: posix
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.6
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.6.4
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.7
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.7.3
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.8
Found candidate GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.8.1
Found candidate GCC installation: /usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.8.2
Selected GCC installation: /usr/lib/gcc/x86_64-linux-gnu/4.8
main.cpp:9:31: error: invalid application of 'sizeof' to a function type
    static const bool value = sizeof(T) == sizeof(int);
                              ^~~~~~~~~
main.cpp:13:47: note: in instantiation of template class 'Eval<double (double)>' requested here
void fun(const F& f, typename std::enable_if< Eval<F>::value >::type* = 0)
                                              ^
main.cpp:13:6: note: while substituting deduced template arguments into function template 'fun' [with F = double (double)]
void fun(const F& f, typename std::enable_if< Eval<F>::value >::type* = 0)
     ^
1 error generated.
